@@ -16,7 +16,7 @@ generalized linear, multinomial-logit, and proportional-odds logit models.
 \tabular{ll}{
 Package: \tab effects\cr
 Version: \tab 2.2-5\cr
-Date: \tab 2013/08/27\cr
+Date: \tab 2013/08/31\cr
 Depends: \tab R (>= 2.5.0), lattice, grid, MASS, nnet, colorspace\cr
 Suggests: \tab nlme, lme4\cr
 LazyLoad: \tab yes\cr
